attempt to fix ugly 1px whitespace on taphint

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -94,6 +94,8 @@ ul.news{
     background: inherit;
     height: 40px;
     top: 0;
+    left: 0;
+    right: 0;
     text-align: center;
     color: #ffffff;
     font-weight: bold;
